AddSubscribeRoute/bugfix
